integrating pdf-core and working on remote manifest hosting
